fix(styling): overflow on mobile view

--- a/src/_includes/style.css
+++ b/src/_includes/style.css
@@ -2,6 +2,16 @@
   color-scheme: light dark;
 }
 
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 /* There is an alternative using light-dark()
  * but it's a new feature which old browser
  * does not support
@@ -25,6 +35,7 @@
 
 a {
   color: var(--link-color);
+  overflow-wrap: break-word;
 }
 
 body {
@@ -49,7 +60,8 @@ header {
 
 nav > ul {
   display: flex;
-  margin-left: -29pt;
+  margin-left: 0;
+  padding-left: 0;
 }
 
 nav > ul > li {
@@ -63,7 +75,8 @@ nav > ul > li {
 }
 
 #blogs {
-  margin-left: -41px;
+  margin-left: 0;
+  padding-left: 0;
 }
 
 .bold {
@@ -83,8 +96,19 @@ nav > ul > li {
 }
 
 img {
+  display: block;
   max-width: 100%;
+  max-inline-size: 100%;
   height: auto;
+}
+
+pre {
+  max-width: 100%;
+  overflow-x: auto;
+}
+
+pre code {
+  overflow-wrap: normal;
 }
 
 .text {
